--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,6 @@
     },
     "baseUrl": "src"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
