--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --cache ."
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
