--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "styled-components": "^6.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.4.2",
